env/overlays/dev/env/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: dev
spec:
  type: NodePort
  selector:
    app: dev-app
  ports:
    - protocol: TCP
      nodePort: 31000
      port: 80
      targetPort: 80
